q10/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: qq5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: drupal
        image: drupal:10.2.7-php8.2-fpm-bookworm
        ports:
        - containerPort: 9000
---

apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: qq5
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 9000
    protocol: TCP
  selector:
    app: dashboard
