q10/q10-dashboard-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: qq5
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: drupal
          image: drupal:10.2.7-php8.2-fpm-bookworm
          ports:
            - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: qq5
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
