q10/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: qq5
spec:
  selector:
    app: dashboard
  ports:
  - protocol: TCP
    port: 80  
    targetPort: 9000  
  type: ClusterIP
