q10/10.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: dashboard.qq5.org
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: drupal
            port:
              number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: qq5
spec:
  selector:
    app: drupal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: qq5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
      - name: drupal
        image: drupal:10.2.7-php8.2-fpm-bookworm
        ports:
        - containerPort: 80
